2017-06-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (start_degraded_mode): Go in degraded mode if
	  there is no storage

2017-06-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: dp_degraded_modemust be TRUE if nb_storage == 0

2017-06-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Rest.pm: We need WWW::Curl::Easy version
	  4.14 or newer

2017-06-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3.c: Fix for x-amz-server-side-encryption

2017-06-13  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/ambsdtar.pl, installcheck/amgtar.pl.
	  installcheck/amstar.pl: Fix for !SINGLE_USERID

2017-06-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3-device.h (_S3Device): last_byte_read,
	  next_block_to_read, next_byte_to_read must be gint64

2017-06-08  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/ammessage.c (3600096): Print the security_file
	* common-src/security-file.c (security_file_check_path): Add the
	  security_file to the message
	* installcheck/ambsdtar.pl, installcheck/amgtar.pl,
	  installcheck/amstar.pl: Test it

2017-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c: Fix planner looping

2017-06-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.5

2017-06-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/amanda_configure.m4: Call AMANDA_CHECK_LIBDL
	* config/amanda/libs.m4 (AMANDA_CHECK_LIBDL): Check if libdl exists
	* device-src/Makefile.am: Use $LIBDL}

2017-06-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c (read_block): Reset current_line_num after
	  processing config_overrides

2017-06-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* recover-src/extract_list.c: Fix memory leak

2017-06-05  Jean-Louis Martineau <JMartineau@carbonite.com>