@@ -272,6 +272,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                                 }
                                                   },
                                        'dead_run' => 1,
+                                       'aborted' => '',
                                        'starttime' => $starttime,
                                        'holding_space' => 868352,
                                        'network_free_kps' => '600',
@@ -773,6 +774,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                                 }
                                                   },
                                        'dead_run' => 1,
+                                       'aborted' => '',
                                        'starttime' => $starttime,
                                        'holding_space' => 868352,
                                        'network_free_kps' => '600',
@@ -996,6 +998,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                                 }
                                                   },
                                        'dead_run' => 1,
+                                       'aborted' => '',
                                        'starttime' => $starttime,
                                        'holding_space' => 1215488,
                                        'network_free_kps' => '8000',
@@ -1247,6 +1250,7 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
                                                                 }
                                                   },
                                        'dead_run' => 1,
+                                       'aborted' => '',
                                        'starttime' => $starttime,
                                        'holding_space' => undef,
                                        'network_free_kps' => '2000000',
